--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body{
     margin: 0;
     padding: 0;
-    background-image: url('images/fondo.jpg');
+    background-image: url('/curriculum-vitae/images/fondo.jpg');
     background-size: cover; 
     background-repeat: no-repeat; 
     background-position: center center; 
